--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+:root {
+  --bg: #000000;
+  --clr-1: #e53d00;
+  --clr-2: #f54e00;
+  --clr-3: #1f1f1f;
+  --clr-4: #e9edee;
+
+  --blur: 1rem;
+  --fs: clamp(3rem, 8vw, 7rem);
+  --ls: clamp(-1.75px, -0.25vw, -3.5px);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +17,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--color-background);
+  
 }
 
 code {
