--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,14 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Cinzel:wght@400..900&display=swap');
 
-body {
-  min-height: 100vh;
-  display: grid;
-  place-items: center;
-  background-color: var(--bg);
-  color: #fff;
-  font-family: "Bruno Ace SC", "DM Sans", Arial, sans-serif;
-}
-
 *,
 *::before,
 *::after {
@@ -18,6 +9,23 @@ body {
 
 .content {
   text-align: center;
+  color: #fff;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Bruno Ace SC", "DM Sans", Arial, sans-serif;
+}
+
+.logo-svg img {
+    position: relative;
+    overflow: hidden;
+    background: var(--bg);
+    margin: 0;
+    width: 150px;
+    height: 150px;
+    color: #fff;
 }
 
 .title {
@@ -49,6 +57,7 @@ body {
   z-index: 2;
   mix-blend-mode: darken;
   pointer-events: none;
+  overflow: hidden;
 }
 
 .aurora__item {
