--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--color-background);
-  
+  background-color: var(--bg);
 }
 
 code {
